--- a/lib/CISDBServer.yaml
+++ b/lib/CISDBServer.yaml
@@ -46,7 +46,9 @@ resources:
         - protocol: tcp
           port_range_min: 80
           port_range_max: 80
-      
+        - protocol: tcp
+          port_range_min: 3306
+          port_range_max: 3306      
 
   
   my_port:
@@ -67,31 +69,31 @@ resources:
       flavor: {get_param: flavor}
       image: {get_param: image}
       key_name: {get_param: key}
-#      networks:
-#        - port: { get_resource: my_port }
-      networks: [{network: {get_param: private_network} }]
+      networks:
+        - port: { get_resource: my_port }
+#      networks: [{network: {get_param: private_network} }]
       user_data_format: RAW
       user_data: |
-            #!/bin/bash -v
-            yum -y install mariadb mariadb-server
-            systemctl enable mariadb.service
-            systemctl start mariadb.service
+            #!/bin/bash
+            sudo rpm -Uvh http://dev.mysql.com/get/mysql-community-release-el7-5.noarch.rpm
+            sudo yum install mysql-server -y
+            sudo /sbin/service mysqld start
+            #sudo /usr/bin/mysql_secure_installation
+            #sudo yum install mariadb-server mariadb
+            sudo iptables -I INPUT -p tcp --dport 3306 -m state --state NEW,ESTABLISHED -j ACCEPT
+            sudo iptables -I OUTPUT -p tcp --sport 3306 -m state --state ESTABLISHED -j ACCEPT
             mysqladmin -u root password rootpwd
             cat << EOF | mysql -u root --password=rootpwd
             CREATE DATABASE cis;
-            GRANT ALL PRIVILEGES ON cisuser.* TO "cisuser"@"%"
-            IDENTIFIED BY "cispwd";
+            create user 'cisuser'@'localhost' identified by 'cispwd';
+            grant all privileges on *.* to 'cisuser'@'localhost';
+            grant all privileges on *.* to 'cisuser'@'%' identified by 'cispwd';
+            grant all privileges on *.* to 'cisuser'@'%' with grant option;
+            commit;
             FLUSH PRIVILEGES;
             EXIT
             EOF
-#          params:
-#            $db_rootpassword: {get_attr: [database_root_password, value]}
-#            $db_name: {get_param: database_name}
-#            $db_user: {get_param: database_user}
-#            $db_password: {get_attr: [database_password, value]}
-     
-
-
+                    
         
 
 outputs:
