--- a/lib/CISWebServer.yaml
+++ b/lib/CISWebServer.yaml
@@ -84,6 +84,7 @@ resources:
             git clone https://github.com/hsurti/cisra.git
             cp cisra/testws.php /var/www/html/.
             service httpd start
+            sudo yum install mysql -y
 
 
   floating_ip:
